maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:23: error: ')' expected but 'if' found.
	if (!aMurNord(x,y+1) {
        ^JediEscaper:29: error: ')' expected but 'if' found.
	if (!aMurOuest(x,y) {
        ^JediEscaper:35: error: ')' expected but 'if' found.
	if (!aMurOuest(x+1,y) {
        ^JediEscaper:41: error: ')' expected but '}' found.
}
^